--- a/src/assets/layouts/layout/css/scout24.scss
+++ b/src/assets/layouts/layout/css/scout24.scss
@@ -1,7 +1,20 @@
 @import "variables.scss";
 
+
+.page-content-wrapper, page-main-content, .page-container {
+  height: 100%;
+}
+
+.page-content-wrapper .page-main-content {
+  height: 100%;
+}
+
+.page-container {
+  min-width: 1270px;
+}
+
+
 .sc-search-result {
-  
   
   h1 {
     margin: 0;
@@ -15,9 +28,6 @@
     margin-bottom: 0;
   }
   
-  .col-md-4 {
-    margin-right: 20px;
-  }
 }
 
 .sc-search-result-options {
@@ -67,7 +77,32 @@
   label.sub {
     font-size: $fs-paragraph;
   }
+  
+  .btn-card-thumbnail-delete {
+    top: 0;
+    right: 0;
+    margin: 0;
+    display: none;
+    text-shadow: none;
+    color: #000000;
+  }
+  
 }
+
+
+.btn-card-thumbnail-delete:hover {
+    cursor: pointer;
+  }
+  
+.sc-selected-object:hover {
+//  cursor: move;
+  
+  .btn-card-thumbnail-delete {
+    display: block;
+  }
+}
+
+
 
 .sc-selected-object {
   margin-right: 6px;
@@ -78,21 +113,22 @@
 //  box-shadow: rgba(0, 0, 0, 0.106863) 0px 3px 10px, rgba(0, 0, 0, 0.127451) 0px 3px 10px;
   box-shadow: rgba(0, 0, 0, 0.06) 0px 5px 6px;
   border: $main-border;
+  position: relative;
 }
 
 .sc-selected-objects-sidebar {
-  height: calc(100% - 95px);
-  top: 95px;
-  width: 400px;
+  min-height: 500px;
+  height: 100%;
+  max-width: 400px;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
   background-color: white;
   float: right;
   right: 0px;
-  position: fixed;
   padding: 20px 50px 0px 50px;
   box-shadow: rgba(0, 0, 0, 0.08431) 0px 4px 7px 0px;
   transition: All 0.5s cubic-bezier(0.06, 1.35, 0.6, 1.05);
+  position: relative;
   
   .options-wrapper {
     position: absolute;
@@ -133,9 +169,16 @@
   overflow: hidden;
 }
 
+.sc-search-area {
+  display: block;
+  margin-top: 90px;
+}
+
 #sc-search-field {
+  margin: 0 auto;
   position:relative;
-  width: 770px;
+  max-width: 650px;
+  width: 100%;
   
   input[type=text] {
     height: 65px;
@@ -152,6 +195,7 @@
     position: absolute;
     left: 30px;
     top: 25px;
+    color: #a5a5a5;
   }
   
   button {
@@ -183,10 +227,10 @@
     float: left;
   }
 
-
 .sc-object-select-area {
-  margin-top: 15px;
-  width: 770px;
+  margin: 15px auto;
+  max-width: 650px;
+  width: 100%;
   height: 300px;
   background-color: #D9DDE6;
   border-radius: $rounded-corners;
@@ -231,7 +275,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
-
+ 
 .sc-custom-image-area {
   position: absolute;
   top: 0;
@@ -239,6 +283,98 @@
   width: 100%;
   height: 100%;
 }
+
+.sc-selected-objected-metadata-link {
+  word-break: break-all;
+}
+
+/* ----------------
+ * SELECTED OBJECTS LIST VIEW
+ --------------- */
+
+.sc-list-selected-objects > div > {
+  
+  .sc-selected-object {
+    overflow: hidden;
+    margin-bottom: 15px;
+  }
+}
+
+.sc-list-selected-objects > div > * {
+  display: block;
+  height: 55px;
+  
+
+
+  .sc-selected-object-thumbnail-wrapper {
+    width: 70px;
+    height: 55px;
+    float: left;
+    display: inline-block;
+  }
+
+  .sc-selected-object-thumbnail {
+    height: 55px;
+    border-top-right-radius: 0;
+    border-top-left-radius: 4px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 4px;
+  }
+  
+  .sc-selected-object-thumbnail-wrapper {
+    border-top-right-radius: 0;
+    border-top-left-radius: 4px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 4px;
+  }
+  
+  .sc-selected-object-metadata {
+    float: left;
+    /* 70px is thumbnail size */
+    width: calc(100% - 70px);
+    padding: 10px 8px 0 8px;
+
+    label {
+      font-size: 12px;
+      margin: 0;
+    }
+
+    label:first-child {
+      margin-bottom: -5px;
+      cursor: move;
+    }
+
+    label.sc-sub {
+      color: #848484;
+      cursor: move;
+    }
+  }
+  
+  .sc-selected-object-metadata-link {
+    float: left;
+    //    text-overflow: initial;
+  }
+
+  .link {
+    position: absolute;
+    top: 0;
+    left: 70px;
+  }
+
+}
+  
+
+/* ----------------
+ * SELECTED OBJECT CONTAINER
+ --------------- */
+
+.sc-selected-objects-container {
+  height: 100%;
+  min-height: 500px;
+  background-color: #fff;
+  max-width: 400px;
+}
+
 
 
 /* ----------------
