--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
 
         <!-- BEGIN LOGO -->
         <div class="page-logo">
-          <a href="/ApiSocut24-web">  <!--/dashboard-->
+          <a href="/ApiScout24-web">  <!--/dashboard-->
             <span alt="logo" class="logo-top"></span> </a>
 
         </div>
@@ -49,7 +49,7 @@
               <ul class="dropdown-menu dropdown-menu-default">
                 <li>
                   <!--<a (click)="logout()">-->
-                  <a href="/ApiSocut24-web/Logout">
+                  <a href="/ApiScout24-web/Logout">
                     <i class="icon-logout"></i> Logout </a>
                 </li>
                 <!--  <li (click)="changeLanguage('en');">
